--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,21 @@
     background: lightgrey;
 }
 
-.frog {
-    background: green;
-}
-
 .l1, .l2, .l3 {
     background: brown;
 }
 
 .l4, .l5 {
     background: lightblue;
+}
+.c1 {
+    background: #000;
+}
+
+.c2, .c3 {
+    background: lightgrey;
+}
+
+.frog {
+    background: green;
 }
